# smart-doc

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  system-doc-rag-spec.md
configs/: logging.yaml  qdrant_schema.json
scripts/: healthcheck.py  init_qdrant.py
src/: __init__.py  config.py  main.py
src/api/: __init__.py  dependencies.py  middleware.py
src/api/routes/: __init__.py  admin.py  documents.py  query.py
src/api/schemas/: __init__.py  document.py  query.py  response.py
src/core/: __init__.py
src/core/chunkers/: __init__.py  base.py  semantic_chunker.py  structure_chunker.py
src/core/extractors/: __init__.py  api_extractor.py  base.py  entity_extractor.py  table_extractor.py
src/core/generators/: __init__.py  base.py  response_generator.py
src/core/parsers/: __init__.py  base.py  excel_parser.py  markdown_parser.py  word_parser.py
src/core/retrievers/: __init__.py  base.py  cross_ref_retriever.py  hybrid_retriever.py
src/infrastructure/: __init__.py  embedding.py  llm_client.py  storage.py  vector_store.py
src/services/: __init__.py  document_service.py  index_service.py  query_service.py
src/utils/: __init__.py  helpers.py  logging.py
tests/: __init__.py  conftest.py
tests/integration/: test_api.py
tests/unit/: test_chunkers.py  test_parsers.py
